parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOT

Grammar

Rule 0     S' -> strategic_region
Rule 1     strategic_region -> ID EQUALS LBRACE statements RBRACE
Rule 2     statements -> statement
Rule 3     statements -> statements statement
Rule 4     statement -> ID EQUALS value
Rule 5     value -> ID
Rule 6     value -> NUMBER
Rule 7     value -> STRING
Rule 8     value -> LBRACE block_content_inside RBRACE
Rule 9     block_content_inside -> statements
Rule 10    block_content_inside -> value_list
Rule 11    value_list -> value_item
Rule 12    value_list -> value_list value_item
Rule 13    value_item -> ID
Rule 14    value_item -> NUMBER
Rule 15    value_item -> STRING

Terminals, with rules where they appear

DOT                  : 
EQUALS               : 1 4
ID                   : 1 4 5 13
LBRACE               : 1 8
NUMBER               : 6 14
RBRACE               : 1 8
STRING               : 7 15
error                : 

Nonterminals, with rules where they appear

block_content_inside : 8
statement            : 2 3
statements           : 1 3 9
strategic_region     : 0
value                : 4
value_item           : 11 12
value_list           : 10 12

Parsing method: LALR

state 0

    (0) S' -> . strategic_region
    (1) strategic_region -> . ID EQUALS LBRACE statements RBRACE

    ID              shift and go to state 2

    strategic_region               shift and go to state 1

state 1

    (0) S' -> strategic_region .



state 2

    (1) strategic_region -> ID . EQUALS LBRACE statements RBRACE

    EQUALS          shift and go to state 3


state 3

    (1) strategic_region -> ID EQUALS . LBRACE statements RBRACE

    LBRACE          shift and go to state 4


state 4

    (1) strategic_region -> ID EQUALS LBRACE . statements RBRACE
    (2) statements -> . statement
    (3) statements -> . statements statement
    (4) statement -> . ID EQUALS value

    ID              shift and go to state 5

    statements                     shift and go to state 6
    statement                      shift and go to state 7

state 5

    (4) statement -> ID . EQUALS value

    EQUALS          shift and go to state 8


state 6

    (1) strategic_region -> ID EQUALS LBRACE statements . RBRACE
    (3) statements -> statements . statement
    (4) statement -> . ID EQUALS value

    RBRACE          shift and go to state 9
    ID              shift and go to state 5

    statement                      shift and go to state 10

state 7

    (2) statements -> statement .

    RBRACE          reduce using rule 2 (statements -> statement .)
    ID              reduce using rule 2 (statements -> statement .)


state 8

    (4) statement -> ID EQUALS . value
    (5) value -> . ID
    (6) value -> . NUMBER
    (7) value -> . STRING
    (8) value -> . LBRACE block_content_inside RBRACE

    ID              shift and go to state 11
    NUMBER          shift and go to state 13
    STRING          shift and go to state 14
    LBRACE          shift and go to state 15

    value                          shift and go to state 12

state 9

    (1) strategic_region -> ID EQUALS LBRACE statements RBRACE .

    $end            reduce using rule 1 (strategic_region -> ID EQUALS LBRACE statements RBRACE .)


state 10

    (3) statements -> statements statement .

    RBRACE          reduce using rule 3 (statements -> statements statement .)
    ID              reduce using rule 3 (statements -> statements statement .)


state 11

    (5) value -> ID .

    RBRACE          reduce using rule 5 (value -> ID .)
    ID              reduce using rule 5 (value -> ID .)


state 12

    (4) statement -> ID EQUALS value .

    RBRACE          reduce using rule 4 (statement -> ID EQUALS value .)
    ID              reduce using rule 4 (statement -> ID EQUALS value .)


state 13

    (6) value -> NUMBER .

    RBRACE          reduce using rule 6 (value -> NUMBER .)
    ID              reduce using rule 6 (value -> NUMBER .)


state 14

    (7) value -> STRING .

    RBRACE          reduce using rule 7 (value -> STRING .)
    ID              reduce using rule 7 (value -> STRING .)


state 15

    (8) value -> LBRACE . block_content_inside RBRACE
    (9) block_content_inside -> . statements
    (10) block_content_inside -> . value_list
    (2) statements -> . statement
    (3) statements -> . statements statement
    (11) value_list -> . value_item
    (12) value_list -> . value_list value_item
    (4) statement -> . ID EQUALS value
    (13) value_item -> . ID
    (14) value_item -> . NUMBER
    (15) value_item -> . STRING

    ID              shift and go to state 20
    NUMBER          shift and go to state 21
    STRING          shift and go to state 22

    block_content_inside           shift and go to state 16
    statements                     shift and go to state 17
    value_list                     shift and go to state 18
    statement                      shift and go to state 7
    value_item                     shift and go to state 19

state 16

    (8) value -> LBRACE block_content_inside . RBRACE

    RBRACE          shift and go to state 23


state 17

    (9) block_content_inside -> statements .
    (3) statements -> statements . statement
    (4) statement -> . ID EQUALS value

    RBRACE          reduce using rule 9 (block_content_inside -> statements .)
    ID              shift and go to state 5

    statement                      shift and go to state 10

state 18

    (10) block_content_inside -> value_list .
    (12) value_list -> value_list . value_item
    (13) value_item -> . ID
    (14) value_item -> . NUMBER
    (15) value_item -> . STRING

    RBRACE          reduce using rule 10 (block_content_inside -> value_list .)
    ID              shift and go to state 25
    NUMBER          shift and go to state 21
    STRING          shift and go to state 22

    value_item                     shift and go to state 24

state 19

    (11) value_list -> value_item .

    ID              reduce using rule 11 (value_list -> value_item .)
    NUMBER          reduce using rule 11 (value_list -> value_item .)
    STRING          reduce using rule 11 (value_list -> value_item .)
    RBRACE          reduce using rule 11 (value_list -> value_item .)


state 20

    (4) statement -> ID . EQUALS value
    (13) value_item -> ID .

    EQUALS          shift and go to state 8
    ID              reduce using rule 13 (value_item -> ID .)
    NUMBER          reduce using rule 13 (value_item -> ID .)
    STRING          reduce using rule 13 (value_item -> ID .)
    RBRACE          reduce using rule 13 (value_item -> ID .)


state 21

    (14) value_item -> NUMBER .

    ID              reduce using rule 14 (value_item -> NUMBER .)
    NUMBER          reduce using rule 14 (value_item -> NUMBER .)
    STRING          reduce using rule 14 (value_item -> NUMBER .)
    RBRACE          reduce using rule 14 (value_item -> NUMBER .)


state 22

    (15) value_item -> STRING .

    ID              reduce using rule 15 (value_item -> STRING .)
    NUMBER          reduce using rule 15 (value_item -> STRING .)
    STRING          reduce using rule 15 (value_item -> STRING .)
    RBRACE          reduce using rule 15 (value_item -> STRING .)


state 23

    (8) value -> LBRACE block_content_inside RBRACE .

    RBRACE          reduce using rule 8 (value -> LBRACE block_content_inside RBRACE .)
    ID              reduce using rule 8 (value -> LBRACE block_content_inside RBRACE .)


state 24

    (12) value_list -> value_list value_item .

    ID              reduce using rule 12 (value_list -> value_list value_item .)
    NUMBER          reduce using rule 12 (value_list -> value_list value_item .)
    STRING          reduce using rule 12 (value_list -> value_list value_item .)
    RBRACE          reduce using rule 12 (value_list -> value_list value_item .)


state 25

    (13) value_item -> ID .

    ID              reduce using rule 13 (value_item -> ID .)
    NUMBER          reduce using rule 13 (value_item -> ID .)
    STRING          reduce using rule 13 (value_item -> ID .)
    RBRACE          reduce using rule 13 (value_item -> ID .)

